--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -52,7 +52,7 @@ body {
   padding-bottom: 0.8rem;
 }
 
-.nav-link .quiz-title {
+.quiz-title {
   font-size: 4rem;
   text-align: center;
   color: rgb(122, 98, 19);
