--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--aero-blue);
+  background: linear-gradient(silver, red, black);
 }
 
 .main {
@@ -55,6 +55,26 @@ body {
 .quiz-title {
   font-size: 4rem;
   text-align: center;
-  color: rgb(122, 98, 19);
+  color: red;
   padding-top: 1rem;
+}
+
+.quiz-info {
+  text-align: center;
+  color: black;
+  margin: 3rem;
+  line-height: 4rem;
+  border-style: solid;
+  border-color: dimgrey;
+}
+
+button {
+  margin: 0 auto;
+  display: block;
+  width: 36rem;
+  height: 4rem;
+  color: black;
+  background-color: blue;
+  margin-top: 4rem;
+  font-size: 3rem;
 }
