--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -124,7 +124,7 @@ body {
 /* Time no styling */
 
 /* form styling */
-#score {
+#form-section {
   color: rgb(0, 112, 204);
   font-size: 2rem;
   text-align: center;
@@ -134,15 +134,13 @@ body {
   max-width: 25rem;
   background-color: black;
 }
-.full-name-input {
+.full-name-input,
+.score-input {
   color: rgb(0, 112, 204);
   font-size: 2rem;
   text-align: center;
   border-style: solid;
   border-width: 0.2rem;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  max-width: 30rem;
   background-color: black;
 }
 .btn-2 {
@@ -154,4 +152,28 @@ body {
 
 .alert {
   color: rgb(0, 112, 204);
+}
+
+/* .number::placeholder {
+  font-size: 1.6rem;
+  letter-spacing: 0.4rem;
+  color: rgb(0, 112, 204);
+  background-color: black;
+} */
+
+.name::placeholder {
+  font-size: 1.6rem;
+  letter-spacing: 0.4rem;
+  color: rgb(0, 112, 204);
+  background-color: black;
+}
+
+.full-name-input {
+  border-style: solid;
+  border-width: 2rem;
+}
+
+.form-scores {
+  color: rgb(0, 112, 204);
+  font-size: 1.5rem;
 }
