--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -177,3 +177,12 @@ body {
   color: rgb(0, 112, 204);
   font-size: 1.5rem;
 }
+
+#timer-section,
+.timer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgb(0, 112, 204);
+  font-size: 2rem;
+}
