--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -124,58 +124,31 @@ body {
 /* Time no styling */
 
 /* form styling */
-#form-section {
-  color: rgb(0, 112, 204);
-  font-size: 2rem;
-  text-align: center;
-  border-style: solid;
-  border-width: 0.2rem;
-  margin-top: 5rem;
-  max-width: 25rem;
-  background-color: black;
-}
-.full-name-input,
-.score-input {
-  color: rgb(0, 112, 204);
-  font-size: 2rem;
-  text-align: center;
-  border-style: solid;
-  border-width: 0.2rem;
-  background-color: black;
-}
-.btn-2 {
-  color: rgb(0, 112, 204);
-  font-size: 2rem;
-  text-align: center;
-  background-color: black;
-}
-
-.alert {
-  color: rgb(0, 112, 204);
-}
-
-/* .number::placeholder {
-  font-size: 1.6rem;
-  letter-spacing: 0.4rem;
-  color: rgb(0, 112, 204);
-  background-color: black;
-} */
-
-.name::placeholder {
-  font-size: 1.6rem;
-  letter-spacing: 0.4rem;
-  color: rgb(0, 112, 204);
-  background-color: black;
-}
-
-.full-name-input {
-  border-style: solid;
-  border-width: 2rem;
-}
 
 .form-scores {
+  font-size: 3rem;
   color: rgb(0, 112, 204);
-  font-size: 1.5rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.form-1 {
+  border-style: solid;
+  border-color: rgb(27, 26, 26);
+  border-width: 0.6rem;
+  align-content: space-around;
+  background-color: whitesmoke;
+  margin: 5rem;
+}
+
+.full-name-input,
+#btn-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgb(0, 112, 204);
+  line-height: 2rem;
+  padding: 1.3rem;
 }
 
 #timer-section,
