--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -197,11 +197,35 @@ body {
   border-style: solid;
   border-color: black;
 }
-.table-data-2{
+.table-data-2 {
   font-size: 3rem;
   color: rgb(0, 112, 204);
   text-align: center;
   width: 20rem;
   border-style: solid;
   border-color: black;
+}
+
+#render-game-over {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-style: solid;
+  border-color: black;
+  border-width: 0.6rem;
+}
+
+.start-over-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgb(0, 112, 204);
+  line-height: 2rem;
+  padding: 1.3rem;
+}
+
+.game-over {
+  color: blue;
+  text-align: center;
+  font-size: 2rem;
 }
